Cleaned up internal words (lit, ret, etc.).

--- a/todo.txt
+++ b/todo.txt
@@ -8,3 +8,7 @@
 
 - add alias for disabling shell substitution of *
 
+- clean up error messages (remove lua stack trace)
+	- ideally show where error occurred:
+		1 +
+		  ^ stack empty!
