Add colon definitions to .f

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,3 @@
-- add new words to .f
-
 - allow using control flow words outside colon definitions?
 
 - what frequently used words are still missing?
@@ -7,6 +5,8 @@
 - format negative hex values as two's complement
 
 - add alias for disabling shell substitution of *
+
+- VLIST and LIST
 
 - clean up error messages (remove lua stack trace)
 	- ideally show where error occurred:
