Renamed >R to PUSH and R> to POP. Added new words +! R@ 2DUP 2DROP LIST

--- a/todo.txt
+++ b/todo.txt
@@ -4,8 +4,6 @@
 
 - add alias for disabling shell substitution of *
 
-- LIST, R@, LEAVE, UNLOOP
-
-- rename >R -> PUSH, R> -> POP ?
+- LEAVE, UNLOOP
 
 - ,S or something for enclosing strings into dictionary (are space terminated strings ok?)
