Added new word CHARS

--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,6 @@
 
 - add alias for disabling shell substitution of *
 
-- LEAVE, UNLOOP
+- LEAVE, UNLOOP, FORGET <word>
 
 - ,S or something for enclosing strings into dictionary (are space terminated strings ok?)
